<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="lk.aditi.ecom_seller.ui.activity.profile.EditProfileActivity">


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_shape" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="Edit Profile"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_below="@id/ll_main"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_Profile"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/girl" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_CameraProfileEdit"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignRight="@+id/iv_Profile"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            android:src="@drawable/ic_camera_with_bg"
            android:tint="@color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_main"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_Name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:hint="@string/enter_name"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />


            <TextView
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="Date of Birth" />

            <TextView
                android:id="@+id/et_Dob"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:hint="@string/enter_date_of_birth"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />

            <TextView
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_Email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />

            <TextView
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_Address"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:hint="@string/enter_address"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />


            <TextView
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/mobile_number" />

<!--            <EditText-->
<!--                android:id="@+id/et_No"-->
<!--                style="@style/EditText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="24dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:hint="@string/_07x_xxxxxxx"-->
<!--                android:inputType="number"-->
<!--                android:maxLength="10" />-->

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    app:ccp_defaultNameCode="94"
                    />

                <EditText
                    android:background="@null"
                    android:id="@+id/et_No"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_07x_xxxxxxx"
                    android:inputType="phone" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />


            <TextView
                android:layout_marginTop="16dp"
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="Business Name" />

            <EditText
                android:id="@+id/et_Business_Name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:hint=""
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />

            <TextView
                android:layout_marginTop="16dp"
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="Location" />

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/red" />


                <TextView
                     android:id="@+id/et_Location"
                     android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    />



            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />


            <TextView
                android:layout_marginTop="16dp"
                style="@style/EditTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="Notes to Customer" />

            <EditText
                android:id="@+id/et_DeliveryInfo"
                style="@style/EditText"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:hint="Delivery info or other info for customers"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/red" />


            <TextView
                android:id="@+id/tv_Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_solid_red"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="SAVE PROFILE"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/loader_layout"
        layout="@layout/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>